--- a/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/destroy.yml
+++ b/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/destroy.yml
@@ -13,8 +13,8 @@
   ansible.builtin.include_tasks: destroy-dns.yml
   tags: dns
 
-- name: Update AAP documentation
-  ansible.builtin.include_tasks: clean-aap.yml
+# - name: Update AAP documentation
+#   ansible.builtin.include_tasks: clean-aap.yml
 
 - name: Destroy agent iso
   ansible.builtin.include_tasks: destroy-agent-iso.yml
