--- a/sno_on_kubevirt/ansible.cfg
+++ b/sno_on_kubevirt/ansible.cfg
@@ -9,6 +9,7 @@
 # Set the log_path
 log_path = ~/ansible.log
 
+inventory = inventory.yaml
 # Output with time statistics
 callbacks_enabled = profile_tasks
 
