--- a/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/create-vm.yml
+++ b/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/create-vm.yml
@@ -39,10 +39,10 @@
         cpu:
           cores: 8
         memory:
-          guest: 16384Mi
+          guest: 16Gi
         resources:
           requests:
-            memory: 16384Mi
+            memory: 16Gi
           # https://docs.openshift.com/container-platform/4.14/virt/install/preparing-cluster-for-virt.html#virt-cluster-resource-requirements_preparing-cluster-for-virt
           # Based on the calculation:
           # Memory overhead per virtual machine ≈ (1.002 × requested memory) \
@@ -55,11 +55,11 @@
           # echo "(16384 * 1.002) + 218 + (8*8)" | bc -l
           #  => 16698.768
           # + 20Mib because of https://docs.openshift.com/container-platform/4.15/virt/monitoring/virt-runbooks.html#virt-runbook-KubevirtVmHighMemoryUsage
-          #   echo "(16384 * 1.002) + 218 + (8*8) + 20 " | bc -l
+          #   echo "(16384 * 1.002) + 218 + (8*8) + 50 " | bc -l
           #  => 16718.768
           #  round: 16720Mi
           limits:
-            memory: 16720Mi
+            memory: 16756Mi
         devices:
           disks:
             - name: root
