--- a/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/clean-aap.yml
+++ b/sno_on_kubevirt/roles/sno_on_kubevirt/tasks/clean-aap.yml
@@ -1,23 +1,22 @@
 ---
 
-
-- name: Store cluster credentials
+- name: Clear Store cluster credentials
   awx.awx.credential:
     name: "cluster_{{ cluster_name }}"
     organization: rbohne
     state: absent
     credential_type: OpenShift Cluster v1
 
-- name: Add host
-  awx.awx.host:
-    name: "{{ cluster_name }}"
-    description: "Single Node"
-    inventory: sno
-    state: absent
+# - name: Remove host
+#   awx.awx.host:
+#     name: "{{ cluster_name }}"
+#     description: "Single Node"
+#     inventory: sno
+#     state: absent
 
-- name: Create group for cluster
-  awx.awx.group:
-    state: absent
-    name: "cluster_{{ cluster_name }}"
-    description: "Cluster {{ cluster_name }} Group"
-    inventory: sno
+# - name: Remove group for cluster
+#   awx.awx.group:
+#     state: absent
+#     name: "cluster_{{ cluster_name }}"
+#     description: "Cluster {{ cluster_name }} Group"
+#     inventory: sno
